src/app/components/DataTable/DataTable.scss
.aside-filter {
  .aside-title-col {
    color: var(--s-color-content-light);
    font: var(--s-typography-heading-x-small);
    text-transform: uppercase;
  }

  .aside-content-col {
    display: flex;
    flex-direction: column;
    gap: var(--s-spacing-xx-small);
  }
}

.render-no-data-message {
  margin: var(--s-spacing-xx-large) var(--s-spacing-x-small);
}

.data-table-root {
  display: flex;
  flex-direction: column;
  border: var(--s-border-width-hairline) solid var(--s-color-border-default);
  border-radius: var(--s-border-radius-medium);
  background-color: var(--s-color-fill-default);

  .tags {
    border-top: 1px solid var(--s-color-border-default);
    padding: var(--s-spacing-x-small) var(--s-spacing-x-small)
      var(--s-spacing-xx-small) var(--s-spacing-x-small);
    display: flex;
    flex-direction: row;
    gap: var(--s-spacing-nano);
    overflow-x: scroll;

    &::-webkit-scrollbar {
      height: var(--s-spacing-nano);
      border-radius: 12px;
    }

    &::-webkit-scrollbar-thumb {
      background: var(--s-color-fill-default-light);
      border-radius: 12px;
    }
  }

  .data-table-header-selected-items {
    background-color: var(--s-color-fill-highlight);
    border-top-left-radius: 7px;
    border-top-right-radius: 7px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: var(--s-spacing-x-small) var(--s-spacing-small);

    .data-table-header-selected-items-message {
      font: var(--s-typography-paragraph-regular);
      color: var(--s-color-content-on-color);
    }

    .data-table-header-selected-items-buttons {
      display: flex;
      gap: var(--s-spacing-xx-small);
      align-items: center;
    }
  }

  .data-table-header {
    display: flex;
    padding: var(--s-spacing-x-small);
    gap: var(--s-spacing-xx-small);

    .data-table-header-actions {
      display: flex;
      gap: var(--s-spacing-xx-small);
    }
  }

  .data-table-content {
    display: grid;
    grid-template-rows: auto;
    overflow-x: scroll;

    &.overflowed {
      .data-table-content-header-expandable {
        position: sticky;
        left: 0;
        z-index: 2;
      }
      .data-table-content-header-checkbox {
        position: sticky;
        left: 56px;
        z-index: 2;
      }

      .th.sticky-first-column {
        position: sticky;
        z-index: 2;
        box-shadow: 4px 0 0 0 rgba(0, 0, 0, 0.04);
      }

      .data-table-content-body .fixed.sticky-first-column {
        position: sticky;
        z-index: 2;
        box-shadow: 4px 0 0 0 rgba(0, 0, 0, 0.04);
      }

      .data-table-content-body-expandable {
        position: sticky;
        left: 0;
        z-index: 2;
      }

      .data-table-content-body-checkbox {
        position: sticky;
        left: 56px;
        z-index: 2;
      }
    }

    &::-webkit-scrollbar {
      height: 4px;
      border-radius: 12px;
    }

    &::-webkit-scrollbar-thumb {
      background: var(--s-color-fill-default-light);
      border-radius: 12px;
    }

    .data-table-content-header {
      display: grid;
      grid-auto-flow: column;
      grid-template-columns: repeat(
        auto-fit,
        minmax(120px, 1fr)
      ); /* Define as colunas com tamanho mínimo de 120px e ocupando o máximo de espaço disponível */
      background-color: var(--s-color-fill-default-light);

      .th {
        background-color: var(--s-color-fill-default-light);
        padding: var(--s-spacing-xx-small) var(--s-spacing-small);
        font: var(--s-typography-paragraph-strong);
        text-transform: uppercase;
        color: var(--s-color-content-light);
        white-space: nowrap;
        display: flex;
        justify-content: space-between;
        flex-direction: row;
        align-items: center;
        cursor: pointer;
        user-select: none;
        transition: 0.2s background ease-in;

        .icon {
          display: flex;
          opacity: 0;
          transition: 0.2s opacity ease-in;
        }

        &:hover {
          background-color: var(--s-color-fill-default-hover);
          .icon {
            opacity: 1;
          }
        }
      }

      .data-table-content-header-checkbox {
        background-color: var(--s-color-fill-default-light);
        width: 56px;
        align-items: center;
        display: flex;
        justify-content: center;
        height: 40px;
      }

      .data-table-content-header-expandable {
        background-color: var(--s-color-fill-default-light);
        width: 56px;
        align-items: center;
        display: flex;
        justify-content: center;
        height: 40px;

        &.down .button-icon .material-symbols-outlined {
          transition: 0.3s all ease-in-out;
          transform: rotate(0deg);
        }

        &.up .button-icon .material-symbols-outlined {
          transform: rotate(-180deg);
          transition: 0.3s all ease-in-out;
        }
      }
    }

    .space-expanded-content {
      height: 56px;
      width: 56px;
    }

    .expanded-content {
      width: 100%;
      border-top: var(--s-border-width-hairline) solid
        var(--s-color-border-default);
      padding: var(--s-spacing-small);
      font: var(--s-typography-paragraph-regular);
      color: var(--s-color-content-default);
    }

    .data-table-content-body {
      display: grid;
      grid-auto-flow: column;
      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
      width: 100%;
      align-items: center;
      background-color: var(--s-color-fill-default);
      border-top: var(--s-border-width-hairline) solid
        var(--s-color-border-default);
      box-sizing: border-box;

      .td {
        min-width: 120px;
        padding: var(--s-spacing-small);
        font: var(--s-typography-paragraph-regular);
        color: var(--s-color-content-default);
        height: 100%;
        white-space: nowrap;
        background-color: var(--s-color-fill-default);
      }

      .data-table-content-body-checkbox {
        width: 56px;
        height: 56px;
        align-items: center;
        display: flex;
        justify-content: center;
        flex-direction: column;
        background-color: var(--s-color-fill-default);
      }

      .data-table-content-body-expandable {
        width: 56px;
        align-items: center;
        display: flex;
        justify-content: center;
        height: 56px;
        background-color: var(--s-color-fill-default);

        &.down .button-icon .material-symbols-outlined {
          transition: 0.3s all ease-in-out;
          transform: rotate(0deg);
        }

        &.up .button-icon .material-symbols-outlined {
          transform: rotate(-180deg);
          transition: 0.3s all ease-in-out;
        }
      }
    }
  }

  .data-table-footer {
    border-top: var(--s-border-width-hairline) solid
      var(--s-color-border-default);
  }
}

@media screen and (max-width: 490px) {
  .data-table-root {
    .data-table-header-actions {
      width: 100%;
      gap: var(--s-spacing-xx-small);
    }
    .data-table-header-selected-items {
      border: var(--s-border-width-hairline) solid
        var(--s-color-border-highlight);
      flex-direction: column;
      align-items: start;
      gap: var(--s-spacing-xx-small);
      height: 112px;
      box-sizing: border-box;
      padding: var(--s-spacing-x-small);
    }
    .data-table-header-selected-items-message {
      padding: var(--s-spacing-xx-small) 0;
    }

    .data-table-header {
      flex-direction: column;
      gap: var(--s-spacing-xx-small);
      padding: var(--s-spacing-x-small);
    }
  }
}

